--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
 
 h1, h3 {
 	font-family: 'Lato', sans-serif;
+	margin-top: 0;
 }
 
 h3 {
@@ -17,10 +18,12 @@ h3 {
 }
 
 p, span {
-	font-family: 'Roboto Slab', serif;
+	font-family: 'Roboto', serif;
+	margin: 0;
 }
 
 header {
+	/*background: #ede9ce;*/
 	margin: 1em 0 0 0;
 }
 
@@ -44,7 +47,7 @@ button {
 main {
 	display: flex;
 	flex-wrap: wrap;
-	margin: 2em 0 0 0;
+	margin: 0 0 0 0;
 }
 
 main > div {
@@ -59,10 +62,16 @@ img {
 }
 
 li {
+	/*background: #64706c;*/
 	border: 1px solid gray;
+	/*color: white;*/
 	margin: .5em .5em;
 	padding: 1em;
 	width: 15em;
+}
+
+i {
+	display: inline-block;
 }
 
 .greeting {
@@ -104,14 +113,16 @@ li {
 }
 
 .wikipedia {
+	/*background: #c7ad88;*/
 	flex: 0 1 50%;
-	padding: 0 2em;
+	padding: 2.5em 2em;
 }
 
 .weather {
+	/*background: #935347;*/
 	flex: 0 1 50%;
+	padding: 2.5em 2em;
 }
-
 
 .zomato {
 	display: flex;
@@ -129,4 +140,55 @@ li {
 .dollar {
 	color: green;
 	font-weight: 700;
+}
+
+/* Media Queries */
+
+/* All mobile devices*/
+
+@media only screen and (max-width: 414px) {
+	img {
+		height: 50px;
+		width: auto;
+	}
+
+	li {
+		width: 90%;
+	}
+	
+	.left {
+		margin-top: 1em;
+		padding-top: 0;
+	}	
+	
+	.greeting {
+		align-items: center;
+		flex-direction: column-reverse;
+	}	
+
+	.wikipedia {
+		flex: 1 1 100%;
+		padding: .5em 2em;
+	}	
+
+	.weather {
+		flex: 1 1 100%;
+		padding: .5em 2em;
+	}	
+
+	.googleMaps {
+		height: 300px;
+		margin: .5em 0;
+	}
+
+	.js-list {
+		justify-content: center;
+	}	
+}
+
+/* iPhone 4 & 5 (portrait) ----------- */
+@media only screen and (max-width : 320px) {
+	button {
+		width: 200px;
+	}
 }
