--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ p, span {
 
 header {
 	/*background: #ede9ce;*/
-	margin: 1em 0 0 0;
+	padding: 1em 0 0 0;
 }
 
 fieldset {
@@ -45,7 +45,7 @@ button {
 }
 
 main {
-	display: flex;
+	display: none;
 	flex-wrap: wrap;
 	margin: 0 0 0 0;
 }
@@ -109,6 +109,7 @@ i {
 .googleMaps {
 	flex: 1 1 100%;
 	height: 400px;
+	margin-top: 1em;
 	width: 100%;
 }
 
@@ -144,11 +145,10 @@ i {
 
 /* Media Queries */
 
-/* All mobile devices*/
-
+/* All mobile devices - Portrait*/
 @media only screen and (max-width: 414px) {
 	img {
-		height: 50px;
+		height: 75px;
 		width: auto;
 	}
 
@@ -190,5 +190,25 @@ i {
 @media only screen and (max-width : 320px) {
 	button {
 		width: 200px;
+	}
+}
+
+/* Smartphones (landscape) ----------- */
+@media only screen and (min-width : 321px) and (max-width: 767px) and (orientation: landscape) {
+	img {
+		height: 75px;
+		margin-top: 2em;
+		width: auto;
+	}
+
+	.left {
+		padding: 0;
+	}
+}
+
+/* iPads (portrait) ----------- */
+@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) {
+	.wikipedia, .weather {
+		padding-bottom: 1em;
 	}
 }
