--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ body {
 
 h1, h3 {
 	font-family: 'Lato', sans-serif;
-	margin-top: 0;
 }
 
 h3 {
@@ -26,9 +25,24 @@ p, span, label {
 	margin: 0;
 }
 
+a {
+	color: #015990;
+}
+
+aside {
+	align-items: center;
+	background: white;
+	box-shadow: 1px 1px 2px #555;
+	display: flex;
+	height: 70px;
+	justify-content: center;
+}
+
 header {
 	background: rgba(0, 0 , 0, .4);
 	color: white;
+	display: flex;
+	justify-content: center;
 	margin: 1em auto 2em auto;
 	width: 315px;
 }
@@ -39,15 +53,11 @@ fieldset {
 	padding: 0;
 }
 
-form {
-	/*background: white;*/
-}
-
 input[type="search"] {
-	padding: .5em;
-    font-size: 100%;
-    margin: 0 0 .5em 0;
-    width: 315px;
+	font-size: 100%;
+	margin: 0 0 .5em 0;
+	padding: 1em;
+	width: 355px;
 }
 
 button {
@@ -73,9 +83,9 @@ main > div {
 }
 
 img {
-	height: 250px;
-	margin: 1em 0;
-	width: 250px;
+	height: 65px;
+	margin: 0 0 0 2em;
+	width: 70px;
 }
 
 li {
@@ -86,44 +96,44 @@ li {
 	width: 15em;
 }
 
+li > * {
+	margin-bottom: .5em;
+}
+
 svg {
 	margin-right: .3em;
 }
 
 .greeting {
 	background: white;
+	border: 1px solid lightgray;
 	display: flex;
 	justify-content: center;
-	margin: 2em auto 0 auto;
+	margin: 1em auto;
 	width: 55%;
 }
 
 .left {
 	align-items: center;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	margin: 0 2em 0 0;
-	width: 300px;
+	padding: 1em 1em;
+	line-height: 150%;
 }
 
 .controls {
 	align-items: center;
 	display: flex;
 	flex-direction: column;
-	flex-wrap: wrap;
 	justify-content: center;
 }
 
 .radioChecks {
-	/*background: white;*/
 	flex: 1 1 50%;
 	margin: 0 0 .5em 0;
 	width: 315px;
 }
 
 .googleMaps {
-	flex: 0 1 90%;
+	flex: 0 1 95%;
 	height: 400px;
 	margin-top: 1em;
 	width: 100%;
@@ -133,13 +143,13 @@ svg {
 	background: rgba(125, 198, 216, 0.85);
 	flex: 0 1 45%;
 	line-height: 1.5em;
-	padding: 2.5em 2em;
+	padding: 0 1.5em 2em;
 }
 
 .weather {
 	background: rgba(158, 240, 159, 0.85);
 	flex: 0 1 45%;
-	padding: 2.5em 2em;
+	padding: 0 1.5em 2em;
 }
 
 .zomato {
@@ -169,116 +179,111 @@ svg {
 
 /* iPads mini (2,3,4), 1, 2, 3, 4, air, air2, pro 9.7 (portrait) */
 @media only screen and (max-device-width : 768px) {
-	img {
-		height: 200px;
-		width: 200px;
-	}
-
 	.greeting {
 		width: 65%;
 	}
 
-	.left {
-		margin: 0;
-		padding: 0 0 0 1em;
+	.wikipedia, .weather {
+		padding: 0 1em 1em;
 	}
 
-	.right {
-		padding-right: 1em; 
+	header {
+		border-bottom-left-radius: 15px;
+		border-bottom-right-radius: 15px;
 	}
+
+	button {
+		margin: 0;
+	}
+
 }
 
 /* iPhone 6 plus, 7 plus, 8 plus (landscape) */
-@media only screen and (max-width: 736px) and (orientation: landscape){}
+@media only screen and (max-width: 736px) and (orientation: landscape){
+	header {
+		border-bottom-left-radius: 15px;
+		border-bottom-right-radius: 15px;
+		margin: 1em auto;
+	}
+
+	button {
+		margin: 0;
+	}
+}
 
 /* iPhone 6, 7, 8 (landscape) */
-@media only screen and (max-width: 667px) and (orientation: landscape){}
+@media only screen and (max-width: 667px) and (orientation: landscape){
+	.wikipedia, .weather {
+		padding: 0 1em .5em 1em;
+	}
+}
 
 /* iPhone 6, 7, 8 (portrait) */
 @media only screen and (max-width: 414px) {
-	img {
-		height: 75px;
-		width: auto;
+	.wikipedia, .weather {
+		flex: 0 1 90%;
+		margin: 0 0 1em 0;
+		padding: 0 1em;
 	}
 
-	li {
-		background: rgba(255, 255, 255, 0.85);
-		width: 90%;
+	header {
+		border-bottom-left-radius: 15px;
+		border-bottom-right-radius: 15px;
+	}
+
+	button {
+		margin: 0;
+	}
+}
+
+/* iPhone 5se (lanscape) */
+@media only screen and (max-width: 568px) and (orientation: landscape){
+	header {
+		margin: 1em auto;
 	}
 
 	.greeting {
-		align-items: center;
-		flex-direction: column-reverse;
-		width: 70%;
-	}	
-	
+		width: 90%;
+	}
+
 	.left {
-		margin: 0;
-		padding: 0 2em 2em 2em;
-	}	
-	
-	.right {
 		padding: 0;
 	}
 
-	.wikipedia {
-		border: 1px solid gray;
-		flex: 0 1 90%;
-		margin: 0 0 1em 0;
-		padding: 1em 1em 2em 1em;
-		text-align: center;
-	}	
-
-	.weather {
-		border: 1px solid gray;
-		flex: 0 1 90%;
-		margin: 0 0 1em 0;
-		padding: 1em 1em 2em 1em;
-		text-align: center;
-	}	
-
-	.googleMaps {
-		height: 300px;
-		margin: 0;
-	}
-
-	.js-list {
-		justify-content: center;
-	}	
-}
-
-/* iPhone 5 (lanscape) */
-@media only screen and (max-width: 568px) and (orientation: landscape){
-	header {
-		margin-bottom: 1em;
-	}
-
-	.greeting {
-		margin-top: 0;
-		padding-bottom: 1em;
-		width: 90%;
+	.wikipedia, .weather {
+		padding: 0 1em .5em 1em;
 	}
 }
 
 /* iPhone 3, 4, 5 (landscape) ----------- */
 @media only screen and (max-width: 480px) and (orientation: landscape) {
+	header {
+		margin: 1em auto;
+	}
+
 	.greeting {
 		width: 90%;
 	}
 
 	.left {
-		margin-right: 1em;
+		padding: 0;
+		width: 90%;
 	}
 
-	.left > h1 {
-		margin-bottom: .25em;
+	.wikipedia, .weather {
+		padding: 0 1em;
 	}
 }
 
 /* iPhone 3, 4, 5 (portrait) ----------- */
 @media only screen and (max-width: 320px) {
+	header {
+		width: 100%;
+		border-radius: 0;
+	}	
+
 	input[type="search"] {
-		width: 250px;
+		width: 300px;
 	}
 
 	button {
@@ -286,7 +291,7 @@ svg {
 	}
 
 	.radioChecks > label {
-		margin: 0 .2em;
+		margin: 0 .1em;
 	}
 
 	.radioChecks {
@@ -296,9 +301,5 @@ svg {
 
 	.greeting {
 		width: 90%;
-	}
-
-	.left {
-		padding: 0 2.5em 2em;
 	}
 }
